# apis_multiplataforma

./: pyproject.toml
logs/src/: main.py
logs/src/config/: dependencies.py  log_config.py
logs/src/controller/: auth_controller.py
logs/src/domain/model/: models.py
logs/src/repository/: usuario_repository.py
logs/src/service/: product_service.py
src/: main.py
src/config/: database.py  log_config.py
src/controller/: product_controller.py
src/repository/: usuario_repository.py
src/service/: auth_service.py  product_service.py
